# C43-mirror

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  32or64bit.c  CMakeLists.txt  Makefile  README.md  c43_pre_L2.css  c43_pre_L2B.css  cleanjm  cross_arm_gcc.build  d  dd  dm42l.xcf  generateCatalogs  generateConstants  generateConstants 2  generateTestPgms  makedm  makefull  makejm  meson.build  meson_options.txt  onARaspberry  testSuite 2  testTtf2RasterFonts  ttf2RasterFonts  ttf2RasterFonts 2  wp43c  wp43c 2  wp43s.cbp  wp43s.depend  wp43s.layout  wp43s_pre.css  x
DM42 binary/: C43.pgm  C43L1_100++.pgm  C43L2_100+.pgm  C43_0729.pgm  C43_43A_L2.pgm  Key_stickers.xcf  README.md  WP43C.pgm  WP43C_2019-08-30_L2.pgm  WP43C_2019-09-15_11L2.pgm  WP43S.pgm  WP43S609.pgm  WP43S609E.pgm  WP43S_0707.pgm  WP43S_overlay.xcf
DMCP_build/: Makefile  README.md  build_GMP_static_ARM_library  build_WP43S.pgm_for_DM42_hardware  c  c_s  compilDMCP  compilDMCP_s  compilGMP  compilGMP_osx  compilGMP_osx_2  decNumberICU  stm32_program.ld
MacOs binaries/: wp43c  wp43s
PROGRAM Library WIP/: Battery usage plot.TXT  Plot F(N) vs P(F(N)).TXT  TSUITE.TXT  XEQM10 copy.TXT  XEQM13.TXT  XEQM14.TXT  XEQM18.TXT
PROGRAMS/: 8888.TXT  Battery usage plot.TXT  Binet Fibonacci Plot.TXT  C43_LOG.TXT  CUBEs.TXT  CalculatorTest.TXT  Fibonacci Formulas.TXT  Gudermannian.TXT  ListXY.TXT  Mandelbrot.TXT  Mersenne Prime 2203.TXT  (+21 more)
dep/: meson.build
dep/decNumberICU/: decBasic.c  decCommon.c  decNumber.c  decNumberLocal.h  decimal128.c  decimal64.c
docs/code/: Doxyfile  Makefile  conf.py  index.rst  meson.build  tam.rst
src/generateCatalogs/: generateCatalogs.c  meson.build
src/generateConstants/: generateConstants.c  meson.build
src/testSuite/: 10pow.txt  2pow.txt  addition_angle16.txt  addition_angle34.txt  addition_complex.txt  addition_complex16.txt  addition_complex16Matrix.txt  addition_complex34.txt  addition_complexMatrix.txt  addition_date.txt  addition_longInteger.txt  addition_real.txt  addition_real16.txt  addition_real16Matrix.txt  addition_real34.txt  addition_realMatrix.txt  addition_shortInteger.txt  addition_string.txt  addition_time.txt  agm.txt  arccos.txt  arccosh.txt  arcsin.txt  arcsinh.txt  arctan.txt  arctanh.txt  argument.txt  bessel.txt  bessel_j.txt  bessel_y.txt  beta.txt  binomial_i.txt  binomial_l.txt  binomial_p.txt  binomial_r.txt  bn.txt  bn_star.txt  cauchy_i.txt  cauchy_l.txt  cauchy_p.txt  (+268 more)
src/ttf2RasterFonts/: meson.build  testTtf2RasterFonts.c  ttf2RasterFonts.c
src/wp43s/: .assign 10.d.icloud  .bufferize 9.d.icloud  .config 10.d.icloud  .constantPointers 6.d.icloud  .constants 9.d.icloud  .conversionAngles 9.d.icloud  .conversionUnits 9.d.icloud  .curveFitting 9.d.icloud  .dateTime 9.d.icloud  .debug.c.kate-swp  .display 9.d.icloud  .error 9.d.icloud  .flags 9.d.icloud  .fractions 9.d.icloud  .gui 9.d.icloud  .integers 9.d.icloud  .jm 9.d.icloud  .jm_graph 9.d.icloud  .keyboard 9.d.icloud  .keyboardTweak 9.d.icloud  .memory 8.d.icloud  .radioButtonCatalog 9.d.icloud  .registerValueConversions 9.d.icloud  .registers 9.d.icloud  .saveRestoreCalcState 9.d.icloud  .screen 9.d.icloud  .softmenus 9.d.icloud  .stack 9.d.icloud  .stats 9.d.icloud  .statusBar 9.d.icloud  .timer 8.d.icloud  .wp43s 8.d.icloud  10pow.h  2pow.c  2pow.h  addition.c  addition.h  addons.c  addons.h  arcsin.h  (+159 more)
src/wp43s-dmcp/: main.h  meson.build  qspi_crc.h  stm32_program.ld
src/wp43s-dmcp/pch/: wp43s-dmcp_pch.h
src/wp43s-gtk/: meson.build  wp43s-gtk.c
src/wp43s-gtk/pch/: wp43s-gtk_pch.h
src/wp43s/browsers/: .flagBrowser 4.o.icloud  .fontBrowser 4.o.icloud  .registerBrowser 6.o.icloud  browsers.h  flagBrowser.c  flagBrowser.h  fontBrowser.c  fontBrowser.h  registerBrowser.c  registerBrowser.h
src/wp43s/c43Extensions/: addons.c  addons.h  graphText.c  graphs.c  graphs.h  inlineTest.c  inlineTest.h  jm.c  jm.h  jm_graph.c  jm_graph.h  keyboardTweak.c  keyboardTweak.h  radioButtonCatalog.c  radioButtonCatalog.h  textfiles.c  textfiles.h  xeqm.c  xeqm.h
src/wp43s/distributions/: binomial.c  binomial.h  cauchy.c  cauchy.h  chi2.c  chi2.h  distributions.h  exponential.c  exponential.h  f.c  f.h  geometric.c  geometric.h  hyper.c  hyper.h  logistic.c  logistic.h  negBinom.c  negBinom.h  normal.c  normal.h  poisson.c  poisson.h  t.c  t.h  weibull.c  weibull.h
src/wp43s/logicalOps/: .and 4.o.icloud  .countBits 4.o.icloud  .mask 4.o.icloud  .nand 4.o.icloud  .nor 4.o.icloud  .not 4.o.icloud  .or 4.o.icloud  .rotateBits 4.o.icloud  .setClearFlipBits 4.o.icloud  .xnor 4.o.icloud  .xor 4.o.icloud  and.c  and.h  countBits.c  countBits.h  logicalOps.h  mask.c  mask.h  nand.c  nand.h  nor.c  nor.h  not.c  not.h  or.c  or.h  rotateBits.c  rotateBits.h  setClearFlipBits.c  setClearFlipBits.h  xnor.c  xnor.h  xor.c  xor.h
src/wp43s/mathematics/: .10pow 8.d.icloud  .2pow 8.d.icloud  .addition 8.d.icloud  .agm 8.d.icloud  .arccos 8.d.icloud  .arccosh 8.d.icloud  .arcsin 8.d.icloud  .arcsinh 8.d.icloud  .arctan 8.d.icloud  .arctanh 8.d.icloud  .ceil 8.d.icloud  .changeSign 8.d.icloud  .comparisonReals 8.d.icloud  .conjugate 8.d.icloud  .cos 8.d.icloud  .cosh 8.d.icloud  .cpyx 8.d.icloud  .cube 8.d.icloud  .cubeRoot 8.d.icloud  .cxToRe 8.d.icloud  .log2 5.o.icloud  .magnitude 5.o.icloud  .mant 5.o.icloud  .max 5.o.icloud  .min 5.o.icloud  .minusOnePow 7.o.icloud  .modulo 7.o.icloud  .multiplication 7.o.icloud  .neighb 6.o.icloud  .parallel 7.o.icloud  .pcg_basic 7.o.icloud  .power 7.o.icloud  .prime 6.o.icloud  .random 7.o.icloud  .reToCx 6.o.icloud  .realPart 7.o.icloud  .remainder 7.o.icloud  .round 7.o.icloud  .roundi 7.o.icloud  .sign 6.o.icloud  (+267 more)
src/wp43s/programming/: clcvar.c  clcvar.h  decode.c  decode.h  input.c  input.h  inputVar.c  inputVar.h  lblGtoXeq.c  lblGtoXeq.h  manage.c  manage.h  nextStep.c  nextStep.h  programmableMenu.c  programmableMenu.h  programming.h
src/wp43s/solver/: equation.c  equation.h  graph.c  graph.h  solve.c  solve.h  solver.h  sumprod.c  sumprod.h  tvm.c  tvm.h
src/wp43s/ui/: tam.c  tam.h
subprojects/packagefiles/gmp-6.2.0/: meson.build
(+238 files in other folders)
