wp43s_src = files(
  'assign.c',
  'browsers/flagBrowser.c',
  'browsers/fontBrowser.c',
  'browsers/registerBrowser.c',
  'bufferize.c',
  'charString.c',
  'config.c',
  'constants.c',
  'conversionAngles.c',
  'conversionUnits.c',
  'curveFitting.c',
  'dateTime.c',
  'debug.c',
  'display.c',
  'distributions/binomial.c',
  'distributions/cauchy.c',
  'distributions/chi2.c',
  'distributions/exponential.c',
  'distributions/f.c',
  'distributions/geometric.c',
  'distributions/hyper.c',
  'distributions/logistic.c',
  'distributions/negBinom.c',
  'distributions/normal.c',
  'distributions/poisson.c',
  'distributions/t.c',
  'distributions/weibull.c',
  'error.c',
  'flags.c',
  'fonts.c',
  'fractions.c',
  'gui.c',
  'integers.c',
  'items.c',
  'keyboard.c',
  'logicalOps/and.c',
  'logicalOps/countBits.c',
  'logicalOps/mask.c',
  'logicalOps/nand.c',
  'logicalOps/nor.c',
  'logicalOps/not.c',
  'logicalOps/or.c',
  'logicalOps/rotateBits.c',
  'logicalOps/setClearFlipBits.c',
  'logicalOps/xnor.c',
  'logicalOps/xor.c',
  'mathematics/10pow.c',
  'mathematics/2pow.c',
  'mathematics/addition.c',
  'mathematics/agm.c',
  'mathematics/arccos.c',
  'mathematics/arccosh.c',
  'mathematics/arcsin.c',
  'mathematics/arcsinh.c',
  'mathematics/arctan.c',
  'mathematics/arctanh.c',
  'mathematics/arg.c',
  'mathematics/bessel.c',
  'mathematics/beta.c',
  'mathematics/bn.c',
  'mathematics/ceil.c',
  'mathematics/changeSign.c',
  'mathematics/checkValue.c',
  'mathematics/compare.c',
  'mathematics/comparisonReals.c',
  'mathematics/conjugate.c',
  'mathematics/cos.c',
  'mathematics/cosh.c',
  'mathematics/cpyx.c',
  'mathematics/cross.c',
  'mathematics/cube.c',
  'mathematics/cubeRoot.c',
  'mathematics/cxToRe.c',
  'mathematics/dblDivision.c',
  'mathematics/dblMultiplication.c',
  'mathematics/decomp.c',
  'mathematics/deltaPercent.c',
  'mathematics/division.c',
  'mathematics/dot.c',
  'mathematics/erf.c',
  'mathematics/erfc.c',
  'mathematics/exp.c',
  'mathematics/expMOne.c',
  'mathematics/expt.c',
  'mathematics/factorial.c',
  'mathematics/fib.c',
  'mathematics/floor.c',
  'mathematics/fractionalPart.c',
  'mathematics/gamma.c',
  'mathematics/gammaP.c',
  'mathematics/gammaQ.c',
  'mathematics/gammaXyLower.c',
  'mathematics/gammaXyUpper.c',
  'mathematics/gcd.c',
  'mathematics/gd.c',
  'mathematics/idiv.c',
  'mathematics/idivr.c',
  'mathematics/imaginaryPart.c',
  'mathematics/incDec.c',
  'mathematics/int.c',
  'mathematics/integerPart.c',
  'mathematics/invert.c',
  'mathematics/iteration.c',
  'mathematics/ixyz.c',
  'mathematics/lcm.c',
  'mathematics/ln.c',
  'mathematics/lnPOne.c',
  'mathematics/lnbeta.c',
  'mathematics/log10.c',
  'mathematics/log2.c',
  'mathematics/logxy.c',
  'mathematics/magnitude.c',
  'mathematics/mant.c',
  'mathematics/max.c',
  'mathematics/mean.c',
  'mathematics/min.c',
  'mathematics/minusOnePow.c',
  'mathematics/modulo.c',
  'mathematics/multiplication.c',
  'mathematics/neighb.c',
  'mathematics/opmod.c',
  'mathematics/ortho_polynom.c',
  'mathematics/parallel.c',
  'mathematics/pcg_basic.c',
  'mathematics/percent.c',
  'mathematics/percentMRR.c',
  'mathematics/percentPlusMG.c',
  'mathematics/percentSigma.c',
  'mathematics/percentT.c',
  'mathematics/power.c',
  'mathematics/prime.c',
  'mathematics/random.c',
  'mathematics/rdp.c',
  'mathematics/reToCx.c',
  'mathematics/realPart.c',
  'mathematics/remainder.c',
  'mathematics/round.c',
  'mathematics/roundi.c',
  'mathematics/rsd.c',
  'mathematics/shiftDigits.c',
  'mathematics/sign.c',
  'mathematics/sin.c',
  'mathematics/sinc.c',
  'mathematics/sincpi.c',
  'mathematics/sinh.c',
  'mathematics/slvq.c',
  'mathematics/square.c',
  'mathematics/squareRoot.c',
  'mathematics/subtraction.c',
  'mathematics/swapRealImaginary.c',
  'mathematics/tan.c',
  'mathematics/tanh.c',
  'mathematics/toPolar.c',
  'mathematics/toRect.c',
  'mathematics/ulp.c',
  'mathematics/unitVector.c',
  'mathematics/variance.c',
  'mathematics/w_inverse.c',
  'mathematics/w_negative.c',
  'mathematics/w_positive.c',
  'mathematics/wp34s.c',
  'mathematics/xthRoot.c',
  'mathematics/zeta.c',
  'matrix.c',
  'memory.c',
  'plotstat.c',
  'programming/decode.c',
  'programming/lblGtoXeq.c',
  'programming/manage.c',
  'programming/nextStep.c',
  'recall.c',
  'registerValueConversions.c',
  'registers.c',
  'saveRestoreCalcState.c',
  'screen.c',
  'softmenus.c',
  'sort.c',
  'stack.c',
  'stats.c',
  'statusBar.c',
  'store.c',
  'stringFuncs.c',
  'timer.c',
  'ui/tam.c',
  'wp43s.c')
generateCatalogs_src = files(
  'charString.c',
  'fonts.c',
  'items.c',
  'sort.c')
wp43s_inc = include_directories('.')

vcs_h = vcs_tag(
  command        : ['git', 'describe', '--match=NeVeRmAtCh', '--always', '--abbrev=8', '--dirty=-mod'],
  input          : 'vcs.h.in',
  output         : 'vcs.h')
version_h = configure_file(
  input         : 'version.h.in',
  output        : 'version.h',
  configuration : conf_data)
